# agentbotv1

./: .env.example  .gitignore  DEBUG_LOGIN.md  DOCKER_SETUP.md  Dockerfile  FRESH_DATA_UPDATE.md  HYBRID_UPGRADE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README.md  VFS_HTML_OPTIMIZATION.md  docker-compose.yml  pyproject.toml  test_vfs_html.html
.github/agents/: my-agent.md
.user_data/vfs-fra-session-001/Default/: Cookies
config/: form_mapping.example.yml  form_mapping.vfs.yml  runtime.example.yml  runtime.vfs.yml  runtime.yml  session_store.example.json
config/config/: session_store.example.json
docs/: AI_FORM_FILLING_IMPLEMENTATION.md  HYBRID_FEATURES.md  HYBRID_QUICK_REFERENCE.md  ai-form-filling.md  architecture.md  hybrid-browser.md
examples/: ai_form_example.py
scripts/: debug_login.py  generate_session_key.py  hybrid_example.py  run_agents.py  test_ai_form_filler.py  test_vfs_html_analysis.py
src/.user_data/string/: .org.chromium.Chromium.3q5EKK  Local State  SingletonCookie  SingletonLock  SingletonSocket
src/agentbot/: __init__.py
src/agentbot/agents/: __init__.py  base.py  booking.py  monitor.py
src/agentbot/app/: __init__.py  main.py  models.py
src/agentbot/browser/: __init__.py  browserql.py  humanlike.py  hybrid.py  play.py
src/agentbot/core/: __init__.py  locks.py  locks_redis.py  message_bus.py  message_bus_redis.py  models.py  planner.py  runtime.py  settings.py
src/agentbot/data/: __init__.py  session_store.py
src/agentbot/services/: __init__.py  audit_logger.py  email.py  form_filler.py  llm.py  (+4 more)
tests/: test_event_flow.py
(+256 files in other folders)
